sumo/tests/sumo/extended/emitter/errors/vtypedist/missing_id/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: Attribute 'id' is missing in definition of emitter/vtypedistelem 'emitter'.
Quitting (on error).
